# llm-drift-monitor

./: .gitignore  LAUNCH.md  Makefile  README.md  docker-compose.yml  kind-config.yaml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: Dockerfile  fix_sdk.py  requirements.txt  test-alerts.py  test-prod.py  test_ingest.py  test_load.py  test_production.py
backend/app/: main.py
backend/app/api/: alerts.py  billing.py  dashboard.py  drift.py  ingest.py
backend/app/core/: auth.py  billing.py  config.py  supabase.py
backend/app/models/: schemas.py
backend/app/services/: alert_service.py  cost_service.py  drift_service.py
backend/scripts/: monthly_reset.py  setup.py
backend/tests/: test_backend.py
deployment/nginx/: nginx.conf
docs/: ARCHITECTURE.md  schema.sql
frontend/: Dockerfile  Dockerfile.old  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  sitemap.ts
frontend/src/hooks/: useApi.ts  useAuth.tsx  useData.ts
frontend/src/lib/: api.ts  supabase.ts
helm/llm-monitor/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/llm-monitor/templates/: _helpers.tpl  backend-deployment.yaml  backend-secret.yaml  backend-service.yaml  frontend-deployment-.yaml  frontend-deployment.yaml  frontend-service-.yaml  frontend-service.yaml  (+1 more)
k8s/: namespace.yaml
k8s/backend/: deployment.yaml  secret.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/ingress/: ingress.yaml
scripts/: deploy.sh  dev-setup.sh
sdk/: README.md  pyproject.toml
sdk/llm_monitor/: __init__.py  config.py  monitor.py  pricing.py
sdk/tests/: conftest.py  test_sdk.py
(+8 files in other folders)
